# modulate

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.config/: default.toml
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
config/: local.toml
src/: args.rs  client.rs  config.rs  constant.rs  context.rs  db.rs  error.rs  main.rs
src/api/: client.rs  client2.rs  error.rs  id.rs  mod.rs  model.rs  pagination.rs  playlist.rs  response.rs  token.rs  util.rs
src/config/: error.rs  mod.rs  util.rs
src/db/: error.rs  mod.rs
src/db/model/: mod.rs  playlist.rs  transfer.rs  user.rs  watcher.rs
src/db/repo/: mod.rs  transfer.rs  user.rs  watcher.rs
src/model/: mod.rs  playlist.rs  watcher.rs
src/repo/: user.rs  watcher.rs
src/sync/: error.rs  mod.rs  transfer.rs  util.rs
src/util/: client.rs  cookie.rs  db.rs  jwt.rs  mod.rs
src/watcher/: mod.rs
src/web/: context.rs  error.rs  mod.rs  response.rs  session.rs  view.rs
src/web/middleware/: auth.rs  guest.rs
src/web/router/: auth.rs  connect.rs  mod.rs  user.rs  watcher.rs
src/web/util/: cookie.rs  jwt.rs  mod.rs
stubs/: default.toml
templates/: auth.html  base.html  connect.html  dashboard.html  index.html  user.html  watcher.html
templates/includes/: base.html  script.js  style.css
