[package]
name = "modulate"
version = "0.15.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0"
askama = "0.14"
axum = { version = "0.8", features = ["form", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["env"] }
futures = "0.3"
hmac = "0.12"
jwt = "0.16"
oauth2 = "5.0"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sentry = { version = "0.46", features = ["tracing", "tower-axum-matched-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4", features = ["chrono"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
