[package]
name = "modulate"
version = "0.15.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
askama = "0.15"
axum = { version = "0.8", features = ["form", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
directories = "6.0"
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "toml"] }
futures = "0.3"
hmac = "0.12"
jwt = "0.16"
oauth2 = "5.0"
r2d2 = "0.8"
r2d2_sqlite = { version = "0.32", features = ["bundled"] }
regex = "1.10"
reqwest = { version = "0.13", features = ["json", "query"] }
rust-embed = { version = "8.9", features = ["interpolate-folder-path"] }
sentry = { version = "0.47", features = ["tracing", "tower-axum-matched-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4", features = ["chrono"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
